# rxs-cc-plugins

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md
docs/: 变形度SDK.docx  点云到点云的距离SDK.docx
mesh2cad/: CMakeLists.txt  delaunay.cpp  delaunay.h  main.cpp  mesh2cad.sln  mesh2cad.vcxproj  pcd2stl.cpp  pcd2stl.h
mesh2cad/czxDependence/: czxTool.cpp  czxTool.h  pcl_release.props
meshSlice/: CMakeLists.txt  meshSlice.czx  meshSlice.sln  meshSlice.vcxproj  源.cpp  配置说明.txt
